refactor(gambler): 更新抽卡逻辑并调整工程师商店价格
- 将 List.get(0) 替换为 List.getFirst() 方法
- 调整工程师商店锁具价格从 200 降至 175